--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
+<p>
 <title>卓展2019 | 名古屋市立大学 芸術工学部</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, viewport-fit=cover">
 
-<!-- <link rel="stylesheet" href="css/fullpage.css"> -->
+<meta name="keywords" content="卓展,卓展2019,芸術工学部,名古屋市立大学" />
+<meta name="description" content="名古屋市立大学芸術工学部の学生による卓展2019のサイトです。卓展とは、" />
+
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+<meta property="og:title" content="芸工祭2018|名古屋市立大学" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://geikousai-ncu.com/pre" />
+<!-- <meta property="og:image" content="http://willhina.com/images/sitetop.png" /> -->
+<meta property="og:description" content="名古屋市立芸術工学部の大学祭、芸工祭2018の公式ホームページです。今年のテーマは「我楽多(ガラクタ)」。ガラクタのようにバラバラで一人一人個性のある芸工生。そんな我らが一つとなって作り上げる芸工祭2018！多くを楽しみ、多くを楽しませる。さぁ、あなたも我楽多の一部になってみませんか？" />
+<meta property="og:site_name" content="芸工祭2018|名古屋市立大学" />
+<link rel="stylesheet" href="css/fullpage.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main id="fullpage">
-        <section class="section Top">
+        <section class="Top">
             <div class="Top_titleBox">
                 <h1 class="Top_title">卓展</h1>
                 <p class="Top_subTitle">TAKUTEN2019</p>
@@ -31,51 +41,51 @@
                         .st2{fill:#B4B4B5;}
                     </style>
                     <g>
-                        <path class="st0" d="M-89,449.5c43.4,27.9,83.7,74.4,142.7,62c49.6-9.3,58.9-52.7,93.1-83.7c40.3-37.2,279.2-83.7,148.9-139.6
+                        <path class="st0 rellax" data-rellax-speed="-10" d="M-89,449.5c43.4,27.9,83.7,74.4,142.7,62c49.6-9.3,58.9-52.7,93.1-83.7c40.3-37.2,279.2-83.7,148.9-139.6
                             c-58.9-27.9-173.7-55.8-241.9-46.5C-54.9,257.2-92.1,359.6-82.8,458.8"/>
                     </g>
                     <g>
-                        <path class="st1" d="M719.5,2043.8c1.1-74.9,78.8-135.7,156.3-138.8c52.7-3.1,69.9,3.7,104,31.6c31,24.8,58.9,24.8,96.2,34.1
+                        <path class="st1 rellax" data-rellax-speed="-1" d="M719.5,2043.8c1.1-74.9,78.8-135.7,156.3-138.8c52.7-3.1,69.9,3.7,104,31.6c31,24.8,58.9,24.8,96.2,34.1
                             c68.2,21.7,142.7,117.9,71.3,173.7c-71.3,52.7-266.8,58.9-344.3,15.5C756.5,2132,719,2079.5,719.5,2043.8z"/>
                     </g>
                     <g id="XMLID_1_">
                         <g>
-                            <path class="st0" d="M1052.5,1548.2c60.1,7.7,99.6,67.2,90,120c-16.2,89.2-52.4,102.8-137.2,129.8c-36.3,11.6-109,49.6-149.9,21.7
+                            <path class="st0 rellax" data-rellax-speed="2" d="M1052.5,1548.2c60.1,7.7,99.6,67.2,90,120c-16.2,89.2-52.4,102.8-137.2,129.8c-36.3,11.6-109,49.6-149.9,21.7
                                 c-45.5-31-2.1-62.1-51.7-86.9c-62-31,1.2-100.9,20.7-108.5c24.8-9.7,39.2-11.5,80.7,3.1c33.6,11.8,55.6,12.3,70.3-22.1
                                 c8.1-17.8,17.8-33.1,35.5-46.2c10.4-9.3,25.4-11.2,40.4-11H1052.5z"/>
-                            <path class="st1" d="M1100.5,869.4c27.4,71.2,20.3,121-6.2,163.4c-28.4,45.4-36.6,55.4-79.8,67c-11.4-20.2-18.4-42.1-12.2-68.9
+                            <path class="st1 rellax" data-rellax-speed="3" d="M1100.5,869.4c27.4,71.2,20.3,121-6.2,163.4c-28.4,45.4-36.6,55.4-79.8,67c-11.4-20.2-18.4-42.1-12.2-68.9
                                 c23-99.6-78.2-130.9-133-105.4c8-37.3,25.1-55.8,16.2-105.6c-14.5-80.7-106.1-66.3-169.6-97.2c-15.1-7.4-27.2-17-36.5-28.2
                                 c52.5-11,86.9-42.8,58.8-129.6c-4.3-13.5-12.7-24.4-24-33.2c3.8-1.4,7.9-2.6,12-3.5l0.7-0.1c219.9-54.4,219.5,136.1,272.3,202.8
                                 C1037.7,779.6,1079.8,815.6,1100.5,869.4z"/>
-                            <path class="st0" d="M1014.4,1099.7c21.4,37.8,58.5,70,55,118.3c-1,26.1-8.9,47-21.4,62.5c-18.3-46.1-64.9-83.9-117.2-87
+                            <path class="st0 rellax" data-rellax-speed="3" d="M1014.4,1099.7c21.4,37.8,58.5,70,55,118.3c-1,26.1-8.9,47-21.4,62.5c-18.3-46.1-64.9-83.9-117.2-87
                                 c-46.1,0.7-62.2,20.6-99.6,19.6c-27.6-53.6-35.4-117.8-25.5-178.1l0,0.1c6.6-48,22.7-81.2,51.4-102.6c3.7-2.7,7.8-5.1,12.1-7.1
                                 c-4.1,19-5.8,42.9-0.4,78.4c10.3,68.2,72.1,113.9,132.3,99.3C1005.9,1101.9,1010.3,1100.8,1014.4,1099.7z"/>
-                            <path class="st1" d="M1048.1,1280.5c16.3,40.9,10.2,88.3-34,123.8l-0.4,0.1c-14.8,13.1-37.8,9.7-43,9
+                            <path class="st1 rellax" data-rellax-speed="3" d="M1048.1,1280.5c16.3,40.9,10.2,88.3-34,123.8l-0.4,0.1c-14.8,13.1-37.8,9.7-43,9
                                 c-61-5.9-70.3-36.5-127.6-31.1c-21.3,2.5-50.5,9.8-80.5,15.8c-14.2-62.4-98.2-86.8-157.6-64.8c-4.6-26.8,4.9-52.4,31.2-60.6
                                 c47.6-14.9,0-76.5,47.6-103.4c83.4-47.2,78.6,37.5,134.4,42.7c4.8,0.7,9.2,1,13.3,1.1c10.6,20.7,24.2,39.7,40.8,56.5
                                 C928.3,1325.5,1009.8,1328.1,1048.1,1280.5z"/>
-                            <path class="st2" d="M1014.4,1099.7c-4.1,1.1-8.5,2.2-13.2,3.4c-60.3,14.6-122-31-132.3-99.3c-5.4-35.5-3.7-59.4,0.4-78.4
+                            <path class="st2 rellax" data-rellax-speed="3" d="M1014.4,1099.7c-4.1,1.1-8.5,2.2-13.2,3.4c-60.3,14.6-122-31-132.3-99.3c-5.4-35.5-3.7-59.4,0.4-78.4
                                 c54.8-25.5,156,5.9,133,105.4C996,1057.6,1003,1079.5,1014.4,1099.7z"/>
-                            <path class="st2" d="M1048.1,1280.5c-38.3,47.7-119.8,45-176-11c-16.6-16.7-30.2-35.8-40.8-56.5c37.4,1,53.4-18.9,99.6-19.6
+                            <path class="st2 rellax" data-rellax-speed="3" d="M1048.1,1280.5c-38.3,47.7-119.8,45-176-11c-16.6-16.7-30.2-35.8-40.8-56.5c37.4,1,53.4-18.9,99.6-19.6
                                 C983.1,1196.6,1029.8,1234.4,1048.1,1280.5z"/>
-                            <path class="st1" d="M810.9,875.7c38.3,73.3-123.9,145.7-190.3,161.3c-24.7,5.8-45.4,6.6-62.6,3.7c4.3-9.5,7.9-20,10.5-31.6
+                            <path class="st1 rellax" data-rellax-speed="-2" d="M810.9,875.7c38.3,73.3-123.9,145.7-190.3,161.3c-24.7,5.8-45.4,6.6-62.6,3.7c4.3-9.5,7.9-20,10.5-31.6
                                 c14.5-63.7-29.1-99.6-75.2-100.1c8.8-34.2,28.5-64.6,53.7-75.8c28.7-12.8,40.1-71.5,94.1-66.2c72.4,13.4,51.5,48.1,88,74.6
                                 C754,859.8,783.9,823.9,810.9,875.7z"/>
-                            <path class="st0" d="M764.6,1415.4c1.3,65.2-95.1,115.8-106.7,158.4c-23.9,87.7,98.1,69.1,15.4,156
+                            <path class="st0 rellax" data-rellax-speed="3" d="M764.6,1415.4c1.3,65.2-95.1,115.8-106.7,158.4c-23.9,87.7,98.1,69.1,15.4,156
                                 c-57.5,60.3-169.3-43.1-224.4-46.9c-80-5.5-93.3,43-153.9,95.6c-96.6,83.9-153.1,16.1-220.2-96.2c-8.3-13.8-27.6-48.7-33.9-86.9
                                 c-5.3-32.1-1.4-66.6,26.1-92.6c53.8-50.9,160.1-11.4,204.9-2.9l3.2,0.5c53.1,9.3,140.1,3.1,184.9-29.9
                                 c44.4-28.9,69.5-74.2,108.9-114.4c9.9-10.1,22.3-17.7,36-22.8c4.1,23.9,19.2,48.9,43.6,63.5c25.9,15.5,70.8,9.8,114,1.3
                                 C763.7,1403.5,764.5,1409.3,764.6,1415.4z"/>
-                            <path class="st2" d="M738.2,564.8c28.1,86.8-6.3,118.6-58.8,129.6c-44.6-53.6-24-140.8,34.8-162.7
+                            <path class="st2 rellax" data-rellax-speed="3" d="M738.2,564.8c28.1,86.8-6.3,118.6-58.8,129.6c-44.6-53.6-24-140.8,34.8-162.7
                                 C725.5,540.3,733.9,551.3,738.2,564.8z"/>
-                            <path class="st2" d="M762.5,1398c-43.2,8.5-88.1,14.2-114-1.3c-24.4-14.6-39.5-39.5-43.6-63.5
+                            <path class="st2 rellax" data-rellax-speed="3" d="M762.5,1398c-43.2,8.5-88.1,14.2-114-1.3c-24.4-14.6-39.5-39.5-43.6-63.5
                                 C664.2,1311.3,748.2,1335.6,762.5,1398z"/>
-                            <path class="st1" d="M714.1,531.6c-58.8,22-79.4,109.1-34.8,162.7c-43.9,9.2-100.4,3.8-143.5,3.8c-155,0-163.6,77.5-193.7,206.6
+                            <path class="st1 rellax" data-rellax-speed="3" d="M714.1,531.6c-58.8,22-79.4,109.1-34.8,162.7c-43.9,9.2-100.4,3.8-143.5,3.8c-155,0-163.6,77.5-193.7,206.6
                                 c-34.4,129.1-219.5,81.8-271.2-8.6c-60.2-111.9-55.9-232.4,68.9-292.7h4.3c47.4-17.2,90.4,25.8,146.3,8.6
                                 c60.3-21.5,99-81.8,167.9-94.7C523.1,499.5,656.7,487.5,714.1,531.6z"/>
-                            <path class="st2" d="M493.4,909c46.1,0.5,89.7,36.4,75.2,100.1c-2.6,11.6-6.2,22.1-10.5,31.6C493.2,1029.5,479.2,964.2,493.4,909z
+                            <path class="st2 rellax" data-rellax-speed="-2" d="M493.4,909c46.1,0.5,89.7,36.4,75.2,100.1c-2.6,11.6-6.2,22.1-10.5,31.6C493.2,1029.5,479.2,964.2,493.4,909z
                                 "/>
-                            <path class="st0" d="M406.8,977.6c12.4-47.4,50.3-69,86.6-68.6c-14.2,55.2-0.2,120.4,64.7,131.6c-53.1,116.3-222.2,77.7-220.9,2.4
+                            <path class="st0 rellax" data-rellax-speed="-2" d="M406.8,977.6c12.4-47.4,50.3-69,86.6-68.6c-14.2,55.2-0.2,120.4,64.7,131.6c-53.1,116.3-222.2,77.7-220.9,2.4
                                 v-2.8C344.8,979,398.3,1009.9,406.8,977.6z"/>
                         </g>
                         <g>
@@ -415,49 +425,59 @@
                             L958.7,714.5z"/>
                     </g>
                 </svg>
-                <p class="Top_personImgBox">
+                <p class="Top_personImgBox rellax" data-rellax-speed=".5">
                     <img class="Top_personImg" src="images/1.png" alt="">
                 </p>
-                <p class="Top_personImgBox">
+                <p class="Top_personImgBox rellax" data-rellax-speed="-0.2">
                     <img class="Top_personImg" src="images/2.png" alt="">
                 </p>
-                <p class="Top_personImgBox">
+                <p class="Top_personImgBox rellax" data-rellax-speed=".3">
                     <img class="Top_personImg" src="images/3.png" alt="">
                 </p>
-                <p class="Top_personImgBox">
+                <p class="Top_personImgBox rellax" data-rellax-speed="-0.5">
                     <img class="Top_personImg" src="images/4.png" alt="">
                 </p>
-                <p class="Top_personImgBox">
+                <p class="Top_personImgBox rellax" data-rellax-speed="-0.3">
                     <img class="Top_personImg" src="images/5.png" alt="">
                 </p>
-                <p class="Top_personImgBox">
+                <p class="Top_personImgBox rellax" data-rellax-speed=".2">
                     <img class="Top_personImg" src="images/6.png" alt="">
                 </p>
-                <p class="Top_personImgBox">
+                <p class="Top_personImgBox rellax" data-rellax-speed="-0.5">
                     <img class="Top_personImg" src="images/7.png" alt="">
                 </p>
-                <p class="Top_personImgBox">
+                <p class="Top_personImgBox rellax" data-rellax-speed=".1">
                     <img class="Top_personImg" src="images/8.png" alt="">
                 </p>
-                <p class="Top_personImgBox">
+                <p class="Top_personImgBox rellax" data-rellax-speed=".2">
                     <img class="Top_personImg" src="images/9.png" alt="">
                 </p>
-                <p class="Top_personImgBox">
+                <p class="Top_personImgBox rellax" data-rellax-speed="-0.8">
                     <img class="Top_personImg" src="images/10.png" alt="">
                 </p>
-                <p class="Top_personImgBox">
+                <p class="Top_personImgBox rellax" data-rellax-speed=".2">
                     <img class="Top_personImg" src="images/11.png" alt="">
                 </p>
-                <p class="Top_personImgBox">
+                <p class="Top_personImgBox rellax" data-rellax-speed="-0.3">
                     <img class="Top_personImg" src="images/12.png" alt="">
                 </p>
-                <p class="Top_personImgBox">
+                <p class="Top_personImgBox rellax" data-rellax-speed=".3">
                     <img class="Top_personImg" src="images/13.png" alt="">
                 </p>
-                <p class="Top_personImgBox">
+                <p class="Top_personImgBox rellax" data-rellax-speed=".1">
                     <img class="Top_personImg" src="images/14.png" alt="">
                 </p>
             </div>
+            <div class="Top_scrollBox">
+                <p class="Top_scrollText">Scroll</p>
+                <div class="Top_scrollArrow"></div>
+            </div>
+        </section>
+        <section class="section About">
+            <h1 class="section_title">ABOUT</h1>
+            <p class="About_text">「卓展」とは、名古屋市立大学芸術工学部の学生による作品展示会です。</p>
+            <p class="About_text">プロジェクトに賛同した人々が卓を囲むように集まることから「卓展」となりました。学部４年生をリーダーとして多種多様なジャンルのプロジェクトを立ち上げ、学科・学年の垣根を越えて制作を行います。</p>
+            <p class="About_text">今年も見どころたっぷりの展示会ですので、是非お越しください。</p>
         </section>
         <!-- <section class="section Project">
             <h1 class="section_title">PROJECT</h1>
@@ -492,7 +512,8 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/scrolloverflow.js"></script>  
-    <script src="js/fullpage.js"></script> 
+    <script src="js/fullpage.min.js"></script> 
+    <script src="js/rellax.min.js"></script>
     <script src="js/top.js"></script>
 </body>
 </html>
