--- a/index.html
+++ b/index.html
@@ -511,6 +511,11 @@
     </main>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <script>
+        $(".Top_personImgBox").css("display","none");
+    </script>
+
     <script src="js/scrolloverflow.js"></script>  
     <script src="js/fullpage.min.js"></script> 
     <script src="js/rellax.min.js"></script>
